# poke_pipeline

./: .env  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: poke.py
include/: client.py  data_validation.py
include/minio/.minio.sys/: format.json
