[tool.poetry]
name = "poke-pipeline"
version = "0.1.0"
description = ""
authors = ["EcoFiendly"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.10.1"
polars = "^0.20.16"
pyarrow = "^15.0.2"
requests = "^2.31.0"
pydantic = "^2.6.4"
boto3 = "^1.34.67"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
